test/sema/report-multiple-errors.delta
// RUN: %check_errors %not %delta -typecheck %s

void main() {
    var a = ff; // CHECK: [[@LINE]]:13: error: unknown identifier 'ff'
    var b = xx; // CHECK: [[@LINE]]:13: error: unknown identifier 'xx'
    var c = b;  // CHECK-NOT: unknown identifier 'b'
}
